Fixing issue on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -17,14 +17,16 @@ nav {
     width: 100%;
     background-color: #3ad;
     height: 30px;
-    display: flex;
-    align-items: stretch;
+    display: -webkit-box;
+    -webkit-box-pack: start;
+    -webkit-box-align: start;
+    /*align-items: stretch;*/
 }
 
 nav a {
     margin: auto;
     display: block;
-    cursor: auto;
+    cursor: pointer;
     float: left;
     font-weight: bold;
     color: #fff;
